--- a/style.css
+++ b/style.css
@@ -1,4 +1,18 @@
 h1{
-    color: red;
-    font-size: 50px;
+    color:bisque;
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+body{
+    background-color: #f1f1f1;
+}
+h1 {
+    text-shadow: 2px 2px 5px gray;
+}
+h1 {animation: move 2s infinite alternate;
+}
+@keyframes move {
+    0% {transform: translateY(0);}
+    100% {transform: translateY(20px);}
 }
