--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1{
-    color:bisque;
+    color:rgb(236, 255, 196);
     font-size: 40px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
